UI for getting string from native lib
plus some other random crap like updating gitignore

--- a/res/layout/native_test_layout.xml
+++ b/res/layout/native_test_layout.xml
@@ -5,4 +5,9 @@
     android:layout_height="fill_parent"
     >
 
+    <Button
+        android:id="@+id/ui_button_dostuff"
+        android:text="do some native stuff"
+        style="@style/HomeButton"
+    />
 </LinearLayout>
