--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -5,6 +5,8 @@
         <item name="android:textSize">20dp</item>
         <item name="android:onClick">onButtonClick</item>
         <item name="android:layout_margin">15dp</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 
     <style name="TimeInStateHeading">
